Split into library and binary

--- a/2/Makefile
+++ b/2/Makefile
@@ -1,6 +1,12 @@
-2: 2.c
-	gcc $< -o $@
+2.o: 2.c
+	gcc -c $< -o $@
+
+1202.o: 1202.c
+	gcc -c $< -o $@
+
+2: 2.o 1202.o
+	gcc $^ -o $@
 
 .PHONY: clean
 clean:
-	rm -f 2
+	rm -f 2 *.o
