Implement circular array for IO

--- a/5/Makefile
+++ b/5/Makefile
@@ -1,10 +1,13 @@
 .PHONY: all
-all: interpreter
+all: interpreter buffer_test
 
 %.o: %.c
 	gcc -c $< -o $@
 
 interpreter: interpreter.o 1202.o
+	gcc $^ -o $@
+
+buffer_test: buffer_test.o 1202.o
 	gcc $^ -o $@
 
 .PHONY: clean
