--- a/5/Makefile
+++ b/5/Makefile
@@ -1,5 +1,5 @@
 .PHONY: all
-all: interpreter buffer_test
+all: interpreter pretty_print buffer_test
 
 %.o: %.c
 	gcc -c $< -o $@
@@ -7,8 +7,15 @@ all: interpreter buffer_test
 interpreter: interpreter.o 1202.o
 	gcc $^ -o $@
 
+pretty_print: pretty_print.o 1202.o
+	gcc $^ -o $@
+
 buffer_test: buffer_test.o 1202.o
 	gcc $^ -o $@
+
+.PHONY: test
+test: buffer_test pretty_print interpreter
+	./test.sh
 
 .PHONY: clean
 clean:
